[gd_scene load_steps=12 format=3 uid="uid://d3ki6uubra8xe"]

[ext_resource type="Script" path="res://addons/Trail/trail_2d.gd" id="1"]
[ext_resource type="Script" path="res://src/enemy/HealthDrop.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://iuo7jd3x36lo" path="res://src/player/hp-pickup.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bfj8letbui2o4" path="res://src/enemy/health-drop.png" id="4"]
[ext_resource type="Script" path="res://src/shared/rpg/MoveToward2D.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://b75jdq4qcihj6" path="res://src/enemy/heal-glow.png" id="6"]

[sub_resource type="CircleShape2D" id="1"]
radius = 4.0

[sub_resource type="Curve" id="2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="4"]
curve = SubResource("3")

[sub_resource type="ParticleProcessMaterial" id="5"]
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("4")

[node name="HealthDrop" type="Area2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource("2")

[node name="Sprite2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("4")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="MoveToward2D" type="Node" parent="."]
script = ExtResource("5")
speed = 800
move_object_path = NodePath("..")

[node name="Trail2D" type="Line2D" parent="."]
width = 5.0
width_curve = SubResource("2")
default_color = Color(0.415686, 0.745098, 0.188235, 1)
script = ExtResource("1")

[node name="HealthParticles" type="GPUParticles2D" parent="."]
amount = 4
process_material = SubResource("5")
texture = ExtResource("3")

[connection signal="area_entered" from="." to="." method="_on_HealthDrop_area_entered"]
[connection signal="timeout" from="LifeTime" to="." method="queue_free"]
